--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="" method="post">
+		<label for="name">Name</label>
+		<input type="text" id="name" placeholder="Name">
+		<lable for="phone">Phone Number</lable>
+		<input id="phone" type="text" placeholder="Phone Number">
+		<lable>Address</lable>
+		<input id="address" type="text" placeholder="Address">
+		<label for="checkbox">Have you ever lived with a Dog before?</label>
+		<input id="checkbox" type="checkbox" value="Have you ever lived with a Dog before?">
+		<label >Please select your preferred breeds</label>
+		<select>
+			<option value="labra">German Shepherd</option>
+			<option value="Bulldog">Bulldog</option>
+			<option value="Golden Retriever">Golden Retriever</option>
+		</select>
+		
+		<button id="submit" type="submit" value="Submit">Submite</button>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
