--- a/main.html
+++ b/main.html
@@ -17,14 +17,14 @@
 		<input id="address" type="text" placeholder="Address">
 		<label for="checkbox">Have you ever lived with a Dog before?</label>
 		<input id="checkbox" type="checkbox" value="Have you ever lived with a Dog before?">
-		<label >Please select your preferred breeds</label>
-		<select>
+		<label for="multiSelect">Please select your preferred breeds</label>
+		<select id="multiSelect">
 			<option value="labra">German Shepherd</option>
 			<option value="Bulldog">Bulldog</option>
 			<option value="Golden Retriever">Golden Retriever</option>
 		</select>
 		
-		<button id="submit" type="submit" value="Submit">Submite</button>
+		<button id="submit" type="submit">Submit</button>
 		
 	</form>
     <script type="text/javascript" src="./script.js">
