--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 			<option value="Golden Retriever">Golden Retriever</option>
 		</select>
 		
-		<button id="submit" type="submit" value="Submit">Submit</button>
+		<input id="submit" type="submit" value="Submit">
 		
 	</form>
     <script type="text/javascript" src="./script.js">
